--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -94,13 +94,13 @@
                 <!-- <li class='{{=g_current_page("default/index","active")}}'><a href='{{=URL("index")}}'><i class="icon-home"></i> <span>Dashboard</span></a></li> -->
                 {{ if auth.is_logged_in(): }}
                     <li class='{{=g_current_page("default/projects","active")}}'><a href='{{=URL("projects")}}' class="tip-right" alt="{{=T('My Projects')}}" title="{{=T('My Projects')}}"><i class="icon-dashboard"></i> <span>{{=T('My Projects')}}</span></a></li>
-                    {{if request.function == "product_backlog" or request.function == "board":}}
+                    {{if not request.function == "projects":}}
                         <li class='{{=g_current_page("default/board/%s" %request.args(0),"active")}}'><a href='{{=URL(f="board",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Board')}}" title="{{=T('Board')}}"><i class="icon-list-alt"></i> <span>{{=T('Board')}}</span></a></li>
                         <li class='{{=g_current_page("default/product_backlog/%s" %request.args(0),"active")}}'><a href='{{=URL(f="product_backlog",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Backlog')}}" title="{{=T('Backlog')}}"><i class="icon-tasks"></i> <span>{{=T('Backlog')}}</span></a></li>
                         <li><a href="#" class="tip-right" alt="{{=T('Sprints')}}" title="{{=T('Sprints')}}"><i class="icon-credit-card"></i> <span>{{=T('Sprints')}}</span></a></li>
                         <li><a href="#" class="tip-right" alt="{{=T('Archives')}}" title="{{=T('Archives')}}"><i class="icon-file"></i> <span>{{=T('Archives')}}</span></a></li>
                         <li><a href="#" class="tip-right" alt="{{=T('Team')}}" title="{{=T('Team')}}"><i class="icon-group"></i> <span>{{=T('Team')}}</span></a></li>
-                        <li><a href="#" class="tip-right" alt="{{=T('Statistics')}}" title="{{=T('Statistics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
+                        <li class='{{=g_current_page("default/statistics/%s" %request.args(0),"active")}}'><a href='{{=URL(f="statistics",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Statistics')}}" title="{{=T('Statistics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
                     {{pass}}
                     <li><button id="toogle_sidebar" class="tip-right" alt="{{=T('Expand / Collapse Menu')}}" title="{{=T('Expand / Collapse Menu')}}"><i class='{{=g_if_in_current_page("default/board/%s" %request.args(0),"icon-chevron-right", "icon-chevron-left")}} icon-white'></i> <span>{{=T('Collapse Menu')}}</span></button></li>
                 {{else:}}
@@ -135,21 +135,25 @@
             <script src='{{=URL("static","js/jquery-1.9.1.min.js")}}'></script>
             <script src="{{=URL('static','js/jquery-ui-1.10.2.custom.min.js')}}"></script>
             <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
-            {{ if request.function == "product_backlog" or request.function == "board": }}
-            <script async defer src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
+            <script async defer src='{{=URL("static","js/web2py.js")}}'></script>
+            <script async defer src='{{=URL("static","js/base.js")}}'></script>
+            {{ if not request.function == "projects": }}
+            <script src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
             <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
             <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
+            <script async defer src='{{=URL("static","js/date.format.js")}}'></script>
             {{ pass }}
             {{ if request.function == "product_backlog": }}
             <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
             {{ elif request.function == "board": }}
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
-            <script async defer src='{{=URL("static","js/date.format.js")}}'></script>
             <script async defer src='{{=URL("static","js/board.js")}}'></script>
+            {{ elif request.function == "statistics": }}
+            <script src='{{=URL("static","js/highcharts/highcharts.js")}}'></script>
+            <script src='{{=URL("static","js/highcharts/modules/exporting.js")}}'></script>
+            <script async defer src='{{=URL("static","js/statistics.js")}}'></script>
             {{ pass }}
 
-            <script async defer src='{{=URL("static","js/web2py.js")}}'></script>
-            <script async defer src='{{=URL("static","js/base.js")}}'></script>
             <!--[if lte IE 7]><script src='{{=URL("static","js/lte-ie7.js")}}'>></script><![endif]-->
     </body>
 </html>
