--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,6 +43,40 @@ a:hover {
     /*display: block;*/
     color: #fff;
 }
+div.flash {
+	font-weight: bold;
+	display: none;
+	position: fixed;
+	padding: 10px;
+	top: 48px;
+	right: 50px;
+	min-width: 280px;
+	margin: 0px 0px 10px 10px;
+	vertical-align: middle;
+	cursor: pointer;
+	color: #fff;
+	background-color: #000;
+	border-radius: 8px;
+	-o-border-radius: 8px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	background-image: -webkit-linear-gradient(top,#222,#000);
+	background-image: -o-linear-gradient(top,#222,#000);
+	background-image: -moz-linear-gradient(90deg, #222, #000);
+	background-image: linear-gradient(top,#222,#000);
+	background-repeat: repeat-x;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	z-index: 99999;
+}
+div.flash:hover {
+	opacity: 0.8;
+}
+div.flash #closeflash {
+	color: inherit;
+	float: right;
+	margin-left: 15px;
+}
 
 #projects {
 position: relative;
